[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "password_generator"
version = "0.7.3"
description = "A customisable Python package utilised for generating random passwords, featuring an integrated password entropy calculator."
readme = "README.md"
